[package]
name = "hbca"
version = "0.1.3"
description = " A high budget control application, for synchronizing inputs over the internet. "
authors = ["some1chan"]
license = "OSL-3.0"
repository = "https://github.com/some1chan/hbca"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
# api-all and devtools are from https://github.com/tauri-apps/tauri/discussions/3059
tauri = { version = "1.3", features = ["devtools", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
inputbot = { git = "https://github.com/obv-mikhail/InputBot", branch = "develop" }
winapi = "0.3.9"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
